Name: hlist-field
Version: 0.0
Cabal-Version:    >= 1.2
Build-Type: Simple

Library
  Build-Depends:  base, HList, hlist-tuple, regex-posix, template-haskell
                  
  Exposed-modules: Data.HList.Field, Data.HList.Field.Base, Data.HList.Field.TH,
                   Data.HList.Field.Label

